fixed bug with collapsible header link overlapping with nav

--- a/css/top_navigation.css
+++ b/css/top_navigation.css
@@ -71,6 +71,7 @@ body{
 	transition:
 	visibility 0s var(--transition-timing-function) var(--transition-timing),
 	opacity var(--transition-timing) var(--transition-timing-function);
+	z-index: 999;
 }
 .navbar-menu ul a{
 	/*color: var(--blue-gray-600);*/
